--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "with-redux-toolkit",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "1.5.0",
+    "@tailwindcss/line-clamp": "^0.2.0",
+    "firebase": "^8.6.1",
+    "firebase-admin": "^9.8.0",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-redux": "7.2.2",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "firebase": "^8.6.1",
-    "firebase-admin": "^9.8.0"
+    "react-redux": "7.2.2"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "cross-env": "^7.0.3",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2"
   }
