--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@reduxjs/toolkit": "1.5.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/line-clamp": "^0.2.0",
     "firebase": "^8.6.1",
-    "firebase-admin": "^9.8.0",
-    "next": "latest",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-redux": "7.2.2"
+    "firebase-admin": "^12.3.0",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "7.2.2",
+    "react-responsive-carousel": "^3.2.23"
   },
   "license": "MIT",
   "devDependencies": {
