--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase-admin": "^12.3.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.0",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.23"
   },
