--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-currency-format": "^1.1.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.3.1",
     "react-number-format": "^5.4.0",
     "react-redux": "7.2.2",
