--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "firebase": "^8.6.1",
     "firebase-admin": "^12.3.0",
     "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-currency-format": "^1.1.0",
-    "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.3.1",
     "react-number-format": "^5.4.0",
     "react-redux": "7.2.2",
