--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^12.3.0",
     "next": "^12.2.5",
     "next-auth": "^4.24.7",
+    "next-routes": "^1.4.2",
     "react": "^17.0.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "cross-env": "^7.0.3",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2"
   }
